@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.0.43 - 2013-12-19
 
 CHANGES IN V1.0.44
 
+	- gstopxl: Support for PPD-less printing. Resolution,
+	  InputSlot, Duplex, and ColorModel are set also without PPD
+	  file now.
 	- Added another sample PPD file for a native PDF printer,
 	  Fuji_Xerox-DocuPrint_CM305_df-PDF.ppd. Thanks to Adrian
 	  Johnson for contributing this PPD file.
